--- a/.github/workflows/python-os.yml
+++ b/.github/workflows/python-os.yml
@@ -10,9 +10,11 @@ on:
 jobs:
   build:
 
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -28,6 +30,16 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8
+    - name: Run coverage
+      run:  
+        pytest --cov-config=.coveragerc --cov=./ci_course --cov-report=xml
+        cat coverage.xml
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
+        files: coverage.xml
     - name: Test with pytest
-      run: |
+      run:
         pytest
